fix: Add more white space to table

--- a/MMM-HADisplay.css
+++ b/MMM-HADisplay.css
@@ -9,7 +9,7 @@
 
 .mmm-hadisplay-table td {
   line-height: 1.35;
-  padding: 0 0 0 12px;
+  padding: 0 0 0 20px;
   white-space: nowrap;
 }
 
